Fix off-by-one CSS media query Make TOC full width on small screens

--- a/public/index.css
+++ b/public/index.css
@@ -171,12 +171,10 @@ h2 {
 /* ****************************************
  * TOC
  ******************************************/
-    @media(max-width: 1000px){
+    @media(max-width: 999px){
       d-contents {
         justify-self: start;
         align-self: start;
-        grid-column-start: 2;
-        grid-column-end: 6;
         padding-bottom: 0.5em;
         margin-bottom: 1em;
         padding-left: 0.25em;
